2006-04-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/stat.h: Added Histogram class setup function provided
	by Jordy Potman. This closes Feature Request [1473059].

2006-04-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/signal/filter.cpp: Fixed bug [1469860]. Now fir1()
	declaration matches its definition. Thanks to Jordy Potman for
	reporting this bug.

2006-04-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/doxygen_html.cfg.in: Doxygen configuration changed to
	generate detailed documentation at the top of pages.

==============================================================================

2006-04-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.1 released (SVN tag: release-3-10-1)

	* NEWS: Updated to reflect recent changes.

	* configure.ac: Updated IT++ External package version number.

	* itpp/base/ls_solve.cpp: Fixed a bug caused by improper wrapping
	of backslash functions using it_assert1() macro.

	* itpp/signal/filter.cpp, itpp/signal/filter.h: Fixed bug
	[1468011], so AR_Filter now works when using a single coefficient
	value, e.g. a = "0.5". Minor cosmetic changes applied by the way.

2006-04-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/convcode.cpp, itpp/comm/convcode.h,
	tests/convcode_test.cpp, tests/convcode_test.ref: Fixed improper
	behaviour of the encode_trunc() and decode_trunc() functions. Now,
	each execution of these functions does not reset the encoder and
	decoder states, so it can be used to perform continous decoding
	process. An additional reset() function has been added to reset
	the encoder and decoder states.

2006-04-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc, doc/local/installation.doc: Minor
	documentation updates.

2006-04-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/itcomm.h, itpp/itfixed.h, itpp/itprotocol.h,
	itpp/itsignal.h, itpp/itsrccode.h: Readded inclusion of dependent