@@ -81,6 +81,7 @@ Cygwin or Microsoft Visual C++ .NET) and Mac OS X (more testers needed).
 <b>Bugs and Forums:</b>
 <ul>
 <li><a href="http://sourceforge.net/tracker/?atid=418758&amp;group_id=37044&amp;func=browse">Bug Reports</a></li>
+<li><a href="http://sourceforge.net/tracker/?group_id=37044&atid=418761">Feature Requests</a></li>
 <li><a href="http://sourceforge.net/forum/forum.php?forum_id=115656">Ask for Help</a></li>
 <li><a href="http://sourceforge.net/forum/forum.php?forum_id=115655">Discuss IT++</a></li>
 </ul>
@@ -102,10 +103,15 @@ Cygwin or Microsoft Visual C++ .NET) and Mac OS X (more testers needed).
 <!-- start of right margin -->
 <div style="position:absolute; top:160px; right:20px; width:220px; margin:2px; font-size:80%;">
 
-<b>IT++ Development:</b>
+<b>IT++ Project Sites:</b>
 <ul>
 <li><a href="http://sourceforge.net/projects/itpp/">IT++ at SourceForge</a></li>
-<li><a href="http://sourceforge.net/svn/?group_id=37044">IT++ SVN Repository</a></li>
+<li><a href="http://freshmeat.net/projects/itpp/">IT++ at freshmeat</a></li>
+</ul>
+
+<b>IT++ Development:</b>
+<ul>
+<li><a href="http://svn.sourceforge.net/itpp">IT++ SVN Repository</a></li>
 <li><a href="codingrules.html">Coding Rules</a></li>
 <li><a href="documentation.html">Documentation Rules</a></li>
 <li><a href="test.html">Test Rules</a></li>
