@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1">
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <title>Welcome to $projectname!</title>
   <link href="doxygen.css" rel="stylesheet" type="text/css">
   <link href="tabs.css" rel="stylesheet" type="text/css">
@@ -9,6 +9,6 @@
 </head>
 <body>
 <div style="width: 100%; height: 40px; background-color: #ffff00; border: 1px solid #b0b0b0; text-align: right; margin: 2px; padding: 2px;">
-  <img src="./itpp_logo.png" align="left" alt="" width="100" height="40"> 
-  <img src="./newcom_logo.png" align="right" alt="" width="100" height="40"> 
+  <a href="http://itpp.sourceforge.net"><img src="./itpp_logo.png" align="left" alt="IT++ Logo" border="0" width="100" height="40"></a>
+  <a href="http://newcom.ismb.it"><img src="./newcom_logo.png" align="right" alt="Newcom Logo" border="0" width="100" height="40"></a>
 </div>
